--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "commonform-get-project",
-  "description": "fetch projects from projects.commonform.org",
-  "version": "2.0.1",
+  "name": "commonform-get-publication",
+  "description": "fetch publications from api.commonform.org",
+  "version": "0.0.0",
   "author": "Kyle E. Mitchell <kyle@kemitchell.com> (https://kemitchell.com/)",
   "dependencies": {
     "json-parse-errback": "^2.0.0"
@@ -14,7 +14,7 @@
     "index.js"
   ],
   "license": "Apache-2.0",
-  "repository": "commonform/commonform-get-project",
+  "repository": "commonform/commonform-get-publication",
   "scripts": {
     "test": "defence README.md | replace-require-self | node"
   }
