--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "devDependencies": {
     "defence-cli": "^1.0.5",
-    "replace-require-self": "^1.1.1"
+    "replace-require-self": "^1.1.1",
+    "standard": "^8.0.0-beta.5"
   },
   "files": [
     "index.js"
@@ -16,6 +17,7 @@
   "license": "Apache-2.0",
   "repository": "commonform/commonform-get-publication",
   "scripts": {
-    "test": "defence README.md | replace-require-self | node"
+    "test": "defence README.md | replace-require-self | node",
+    "lint": "standard"
   }
 }
