--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Kyle E. Mitchell <kyle@kemitchell.com> (https://kemitchell.com/)",
   "dependencies": {
     "json-parse-errback": "^2.0.0",
-    "once": "^1.4.0"
+    "once": "^1.4.0",
+    "simple-concat": "^1.0.0"
   },
   "devDependencies": {
     "defence-cli": "^1.0.5",
